syntax = "proto3";

package kuma.mesh.v1alpha1;

option go_package = "github.com/kumahq/kuma/api/mesh/v1alpha1";

import "mesh/v1alpha1/dataplane.proto";
import "mesh/v1alpha1/dataplane_insight.proto";
import "validate/validate.proto";

// DataplaneOverview defines the projected state of a Dataplane.
message DataplaneOverview {

  Dataplane dataplane = 1 [ (validate.rules).message.required = true ];

  DataplaneInsight dataplane_insight = 2;
}
